--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <button onclick="executeCommand('leadership')">leadership</button>
             <button onclick="executeCommand('contact')">contact</button>
             <button onclick="executeCommand('clear')">clear</button>
+            <button onclick="promptCommand()" class="mobile-input-btn" style="display: none;">📝 Type</button>
         </div>
     </div>
 
