--- a/test-simple.html
+++ b/test-simple.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nadjib's Terminal Portfolio</title>
+    <title>Simple Terminal Test</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,13 +29,7 @@
         <div class="command-buttons">
             <button onclick="executeCommand('help')">help</button>
             <button onclick="executeCommand('about')">about</button>
-            <button onclick="executeCommand('education')">education</button>
-            <button onclick="executeCommand('projects')">projects</button>
-            <button onclick="executeCommand('skills')">skills</button>
-            <button onclick="executeCommand('leadership')">leadership</button>
-            <button onclick="executeCommand('contact')">contact</button>
             <button onclick="executeCommand('clear')">clear</button>
-            <button onclick="promptCommand()" class="mobile-input-btn" style="display: none;">📝 Type</button>
         </div>
     </div>
 
